# RustPracticum

./: Cargo.toml
exercise/test_task/: problem.md
exercise/test_task/src/: elve_recovering.rs
lib/: assistant.rs  assistant_test.rs
older/: older.rs
older/chapter_3/: chapter_3.rs  if_statements.rs  repetition_with_loop.rs
older/chapter_4/: chapter_4.rs  free_practice.rs  reference_borrowing.rs
older/chapter_5/: asd.rs  chapter_5.rs  helpers.rs
rust_book/ch_10/: p_3.rs
rust_book/ch_1_getting_started/: p_1.rs  p_2.rs
rust_book/ch_2_guessing_game/: free.rs  p_1.rs  p_2.rs  p_3.rs  p_4.rs
rust_book/ch_3_common/: free.rs  p_1_vars_constants.rs  p_2_shadowing.rs  p_3_data_types.rs  p_4_data_types.rs  p_5_data_types.rs
rust_book/ch_4_functions/: free.rs  p_1_functions.rs  p_2_comments.rs  p_3_control_flow.rs  p_4.rs  p_4_loops.rs
rust_book/ch_5_ownership/: free.rs  p_1_rules.rs  p_2_memory.rs  p_3_functions.rs  p_4_borrowing.rs  p_5_slices.rs
rust_book/ch_5_ownership/experiment/: p_1_ownership.rs  p_2_ref_borrow.rs  p_3_fixing_erros.rs  p_4_slice.rs  p_5_recap.rs
rust_book/ch_6_structs/: free.rs  p_1_structure.rs  p_2_example.rs  p_3_method.rs
rust_book/ch_7_enums/: free.rs  p_1_option.rs  p_2_match.rs  p_2_match_ownership.rs  p_3_if_let.rs
rust_book/ch_8_grow/p_1_structure/src/: p_1.rs
rust_book/ch_8_grow/p_2_mix/: lib.rs  p_2.rs
rust_book/ch_8_grow/p_3_struct_enum/: p_3.rs
rust_book/ch_8_grow/p_3_struct_enum/breakfast/: mod.rs
rust_book/ch_8_grow/p_4_paths/: p_4.rs
rust_book/ch_8_grow/p_5_separating/: front_of_house.rs  p_5.rs
rust_lang/: p_1_functions.rs
rust_lang/ch_2_functions/: functions.rs
rust_lang/ch_3_if/: if.rs
src/: lib.rs  main.rs
